prepare for mq services.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,1 @@
-# TODO: add docker config for dispatcher, worker, rabbitmq and postgresql
+# TODO: add docker config for dispatcher, worker, rabbitmq and postgresql instances
