--- a/mola-worker/Cargo.toml
+++ b/mola-worker/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.99"
+futures-lite = "2.6.1"
+lapin = "3.4.0"
+tokio = { version = "1.47.1", features = ["full"] }
