--- a/mola-dispatcher/Cargo.toml
+++ b/mola-dispatcher/Cargo.toml
@@ -6,11 +6,12 @@ edition = "2024"
 anyhow = "1.0.99"
 async-stream = "0.3.6"
 lapin = "3.4.0"
-postgres = "0.19.10"
 prost = "0.14.1"
 prost-types = "0.14.1"
 serde = { version = "1.0.219", features = ["derive"] }
-tokio = { version = "1.47.1", features=["full"] }
+serde_json = "1.0.143"
+tokio = { version = "1.47.1", features=["macros", "rt-multi-thread", "signal"] }
+tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
 tokio-stream = "0.1.17"
 tonic = "0.14.2"
 tonic-prost = "0.14.2"
