--- a/mola-worker/Cargo.toml
+++ b/mola-worker/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2024"
 anyhow = "1.0.99"
 futures-lite = "2.6.1"
 lapin = "3.4.0"
+serde = "1.0.219"
+serde_json = "1.0.143"
 tokio = { version = "1.47.1", features = ["full"] }
